--- a/testullar_automata/grid.html
+++ b/testullar_automata/grid.html
@@ -14,8 +14,13 @@ body {
 
 #vitruvia_canvas
     {
-    display: block;
+    display: inline;
     }
+#vitruvia_canvas
+{
+    align: center;
+    display: inline-block;
+}
     
 .canvas__mirror {
   height: 100%;
@@ -102,7 +107,7 @@ li.dropdown {
 
 <body onload="initGame()" onresize="updateGrid(0);">
 
-
+<!--
 <ul>
     <li><a href=https://bricklayerdotorg.wordpress.com/>Home</a></li>
     <li class="dropdown">
@@ -116,10 +121,12 @@ li.dropdown {
         </div>
     </li>
 </ul>
-
-
-
 <br>
+-->
+
+
+
+
 
 <input type="image" class = "LEGO" src="bricklayercolors/aqua_02.png"           onclick="pickLEGO(aqua);">
 <input type="image" class = "LEGO" src="bricklayercolors/armygreen_02.png"      onclick="pickLEGO(armygreen);">
@@ -167,13 +174,17 @@ li.dropdown {
 <br><br>
 
 <input type="button" value="+"           onclick="incrementGrid();">
-<var id="size">8</var>
+<var id="size">3</var>
 <input type="button" value="-"           onclick="decrementGrid();">
 <input type="button" value="Clear"       onclick="clearGrid();"/>
 <input type="button" value="Hide Lines"  onclick="hideGridLines(empty);"/>
 <input type="button" value="Show Lines"  onclick="hideGridLines(lineColor);"/>
+
+<!--
 <input type="button" value="Undo"        onclick="undo();"/>
 <input type="button" value="Redo"        onclick="redo();"/>
+-->
+
 <span id ="output_type"> Output Format:</span>
 <select id ="output_format" onchange="changeOutputFormat();">
     <option value="PLAIN">PLAIN</option>
@@ -185,6 +196,16 @@ li.dropdown {
     <img src="" id="mirror" class="canvas__mirror" /> 
     </canvas>
     </div>
+
+<input type="button" value="+"           onclick="incrementGrid2();">
+<var id="size2">8</var>
+<input type="button" value="-"           onclick="decrementGrid2();">
+
+<div id = "canvas_area2">
+    <canvas id="vitruvia_canvas2">
+        <img src="" id="mirror" class="canvas__mirror" />
+    </canvas>
+</div>
 
 </body>
 </html>
